<resources>
    <string name="app_name">Wallet Stone</string>
    <string name="NameLogin">Login</string>
    <string name="CreateAccount">Criar Conta</string>
    <string name="HintLogin">Login</string>
    <string name="HintPassword">Senha</string>
    <string name="MessageLogo">Logo da Stone</string>
    <string name="ChoseUserName">Email</string>
    <string name="ConfirmPassword">Confirme a senha</string>
    <string name="back">voltar</string>
    <string name="title_activity_logado">LogadoActivity</string>
    <string name="title_home">Início</string>
    <string name="title_buyCart">Comprar</string>
    <string name="title_sellCart">Vender</string>
    <string name="title_change">Trocar</string>
    <string name="title_history">Histórico</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="money">R$</string>
    <string name="total">Total:</string>
    <string name="comp">Comprado por R$</string>
    <string name="quantidade">Quantidade:</string>
    <string name="brita">BRT</string>
    <string name="unitario">unitário</string>
    <string name="confirmar">Confirmar</string>
</resources>
