<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_buy_id"
        android:icon="@drawable/ic_add_shopping_cart_black_24dp"
        android:title="@string/title_buyCart" />

    <item
        android:id="@+id/navigation_sell_id"
        android:icon="@drawable/ic_remove_shopping_cart_black_24dp"
        android:title="@string/title_sellCart" />
    <item
        android:id="@+id/navigation_change_id"
        android:icon="@drawable/ic_change_black_24dp"
        android:title="@string/title_change" />
    <item
        android:id="@+id/navigation_history_id"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

</menu>
