<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CadastroActivity">

    <ImageView
        android:id="@+id/cadastro_back"
        android:layout_width="51dp"
        android:layout_height="50dp"
        android:contentDescription="@string/back"
        android:padding="10dp"
        app:srcCompat="@drawable/ic_arrow_back_gray_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cadastro_id_login"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_email_gray_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/ChoseUserName"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableStart="@drawable/ic_email_gray_24dp" />

    <EditText
        android:id="@+id/cadastro_id_password"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:drawableLeft="@drawable/ic_lock_gray_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/HintPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_id_login"
        android:drawableStart="@drawable/ic_lock_gray_24dp" />

    <EditText
        android:id="@+id/cadastro_id_confirmPassword"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:drawableStart="@drawable/ic_lock_gray_24dp"
        android:drawableLeft="@drawable/ic_lock_gray_24dp"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/ConfirmPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_id_password" />

    <Button
        android:id="@+id/cadastro_id_submit"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/CreateAccount"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastro_id_confirmPassword" />


</android.support.constraint.ConstraintLayout>