<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.VenderFragment"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/vendas_linhaValorDisponivel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="TODO"
        android:tint="#F5181616"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendas_valorDisponivel"
        app:srcCompat="@drawable/ic_linha_reta"
        tools:ignore="VectorDrawableCompat" />

    <ImageView
        android:id="@+id/vendas_linhaInferiorConfirmar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="TODO"
        android:tint="#F5181616"
        app:layout_constraintBottom_toTopOf="@+id/vendas_confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_linha_reta"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/vendas_reaisTopo"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="44dp"
        android:text="@string/money"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/vendas_valorDisponivel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vendas_rsTotal"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/money"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vendas_linhaInferiorConfirmar"
        app:layout_constraintStart_toEndOf="@+id/vendas_total" />

    <TextView
        android:id="@+id/vendas_valorDisponivel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="100.000,00"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vendas_textoValordisp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:gravity="center"
        android:text="valor disponível para \n aplicação"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendas_valorDisponivel" />

    <ImageView
        android:id="@+id/vendas_logoStone"
        android:layout_width="138dp"
        android:layout_height="97dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/stone_pagamentos" />

    <ImageView
        android:id="@+id/vendas_retanguloBitcoin"
        android:layout_width="360dp"
        android:layout_height="186dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendas_logoStone"
        app:srcCompat="@drawable/ic_retangulo_vender" />

    <ImageView
        android:id="@+id/vendas_linhaBitcoin"
        android:layout_width="340dp"
        android:layout_height="5dp"
        android:layout_marginTop="84dp"
        android:contentDescription="TODO"
        android:tint="#00858383"
        app:layout_constraintEnd_toEndOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintStart_toStartOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBitcoin"
        app:srcCompat="@drawable/ic_linha_reta"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/vendas_valorCompradoBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:text="@string/comp"
        app:layout_constraintStart_toStartOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintTop_toBottomOf="@+id/vendas_linhaBitcoin" />

    <ImageView
        android:id="@+id/vendas_bitcoinLogo"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBitcoin"
        app:srcCompat="@drawable/ic_bitcoin" />

    <TextView
        android:id="@+id/vendas_quantidadeDeBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="58dp"
        android:text="3"
        android:textColor="#F8161515"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/vendas_bitcoinLogo"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBitcoin" />

    <TextView
        android:id="@+id/vendas_reaisBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/money"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/vendas_quantidadeDeBitcoin"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBitcoin" />

    <TextView
        android:id="@+id/vendas_dinheiroCompradoBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="15.754,50"
        app:layout_constraintStart_toEndOf="@+id/vendas_valorCompradoBitcoin"
        app:layout_constraintTop_toBottomOf="@+id/vendas_linhaBitcoin" />

    <TextView
        android:id="@+id/vendas_unitarioBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/unitario"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBitcoin" />

    <TextView
        android:id="@+id/vendas_quantidadeBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="28dp"
        android:text="@string/quantidade"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintStart_toStartOf="@+id/vendas_retanguloBitcoin" />

    <EditText
        android:id="@+id/vendas_numeroVendaBitcoin"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textCursorDrawable="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintStart_toEndOf="@+id/vendas_quantidadeBitcoin" />

    <TextView
        android:id="@+id/vendas_palavraBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="28dp"
        android:text="Bitcoin"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintEnd_toEndOf="@+id/vendas_retanguloBitcoin" />

    <TextView
        android:id="@+id/vendas_quantoValeBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="65dp"
        android:text="20.691,40"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/vendas_reaisBitcoin"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBitcoin" />

    <TextView
        android:id="@+id/vendas_palavraUnitárioBitcoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/unitario"
        app:layout_constraintEnd_toEndOf="@+id/vendas_retanguloBitcoin"
        app:layout_constraintTop_toBottomOf="@+id/vendas_linhaBitcoin" />


    <ImageView
        android:id="@+id/vendas_retanguloBrita"
        android:layout_width="360dp"
        android:layout_height="186dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vendas_retanguloBitcoin"
        app:srcCompat="@drawable/ic_retangulo_vender" />

    <ImageView
        android:id="@+id/vendas_linhaBrita"
        android:layout_width="340dp"
        android:layout_height="5dp"
        android:layout_marginTop="84dp"
        android:contentDescription="TODO"
        android:tint="#00858383"
        app:layout_constraintEnd_toEndOf="@+id/vendas_retanguloBrita"
        app:layout_constraintStart_toStartOf="@+id/vendas_retanguloBrita"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBrita"
        app:srcCompat="@drawable/ic_linha_reta"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/vendas_valorCompradoBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:text="@string/comp"
        app:layout_constraintStart_toStartOf="@+id/vendas_retanguloBrita"
        app:layout_constraintTop_toBottomOf="@+id/vendas_linhaBrita" />

    <TextView
        android:id="@+id/vendas_quantidadeDeBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="58dp"
        android:text="1200000"
        android:textColor="#F8161515"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/vendas_britaLogo"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBrita" />

    <TextView
        android:id="@+id/vendas_reaisBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="65dp"
        android:text="@string/money"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/vendas_quantidadeDeBrita"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBrita" />

    <TextView
        android:id="@+id/vendas_dinheiroCompradoBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="4,25"
        app:layout_constraintStart_toEndOf="@+id/vendas_valorCompradoBrita"
        app:layout_constraintTop_toBottomOf="@+id/vendas_linhaBrita" />

    <TextView
        android:id="@+id/vendas_unitarioBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/unitario"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/vendas_retanguloBrita"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBrita" />

    <TextView
        android:id="@+id/vendas_quantidadeBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="28dp"
        android:text="@string/quantidade"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/vendas_retanguloBrita"
        app:layout_constraintStart_toStartOf="@+id/vendas_retanguloBrita" />

    <EditText
        android:id="@+id/vendas_numeroVendaBrita"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textCursorDrawable="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="@+id/vendas_retanguloBrita"
        app:layout_constraintStart_toEndOf="@+id/vendas_quantidadeBrita" />

    <TextView
        android:id="@+id/vendas_palavraBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="28dp"
        android:text="Brita"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/vendas_retanguloBrita"
        app:layout_constraintEnd_toEndOf="@+id/vendas_retanguloBrita" />

    <TextView
        android:id="@+id/vendas_quantoValeBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="65dp"
        android:text="4,40"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/vendas_reaisBrita"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBrita" />

    <TextView
        android:id="@+id/vendas_britaLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:shadowColor="#00070707"
        android:text="@string/brita"
        android:textColor="#161616"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/vendas_retanguloBrita"
        app:layout_constraintTop_toTopOf="@+id/vendas_retanguloBrita" />

    <TextView
        android:id="@+id/vendas_palavraUnitárioBrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/unitario"
        app:layout_constraintEnd_toEndOf="@+id/vendas_retanguloBrita"
        app:layout_constraintTop_toBottomOf="@+id/vendas_linhaBrita" />


    <TextView
        android:id="@+id/vendas_total"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/total"
        android:textColor="#111010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/vendas_valorTotal"
        app:layout_constraintEnd_toStartOf="@+id/vendas_linhaInferiorConfirmar" />

    <Button
        android:id="@+id/vendas_confirmar"
        android:layout_width="120dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:background="#24B34D"
        android:text="@string/confirmar"
        android:textColor="#FEFFFC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vendas_valorTotal"
        android:layout_width="31dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="10"
        android:textColor="#090808"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/vendas_linhaInferiorConfirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>